# ChangeLog for kde-base/kdebase
# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-base/kdebase/ChangeLog,v 1.120 2004/03/12 20:44:19 caleb Exp $

  12 Mar 2004; Caleb Tennis <caleb@gentoo.org> kdebase-3.1.4.ebuild,
  kdebase-3.2.0.ebuild, kdebase-3.2.1.ebuild, files/focus-patch.diff,
  files/kdebase-3.1.4-amd64-accessviol.patch, files/konq-crash-patch.diff,
  files/3.1.4/backgroundrc, files/3.1.4/kdmrc,
  files/3.1.4/startkde-3.1.4-gentoo.diff:
  x86 stable and version cleanup

*kdebase-3.2.1 (09 Mar 2004)

  09 Mar 2004; Caleb Tennis <caleb@gentoo.org> kdebase-3.2.1.ebuild,
  files/3.2.1/Xsetup, files/3.2.1/backgroundrc, files/3.2.1/kdmrc,
  files/3.2.1/startkde-3.2.1-gentoo.diff:
  Version bump

  28 Feb 2004; Jason Wever <weeve@gentoo.org> kdebase-3.1.5.ebuild:
  Marked stable on sparc.

  15 Feb 2004; Jason Wever <weeve@gentoo.org> kdebase-3.2.0.ebuild:
  Marked stable on sparc.

  10 Feb 2004; Caleb Tennis <caleb@gentoo.org> kdebase-3.2.0.ebuild:
  x86 stable

  10 Feb 2004; Lars Weiler <pylon@gentoo.org> kdebase-3.2.0.ebuild:
  Stable on ppc.

  05 Feb 2004; Luca Barbato <lu_zero@gentoo.org> kdebase-3.2.0.ebuild:
  Marked ~ppc

  03 Feb 2004; Caleb Tennis <caleb@gentoo.org> kdebase-3.2.0.ebuild,
  files/kdebase-3.2.0-kcontrol.patch:
  Small patch for compilation/installation

*kdebase-3.2.0 (02 Feb 2004)

  02 Feb 2004; Caleb Tennis <caleb@gentoo.org> kdebase-3.2.0.ebuild,
  kdebase-3.2.0_rc1.ebuild, files/3.2.0/Xsetup, files/3.2.0/backgroundrc,
  files/3.2.0/kdmrc, files/3.2.0/startkde-3.2.0-gentoo.diff,
  files/3.2.0_rc1/Xsetup, files/3.2.0_rc1/backgroundrc, files/3.2.0_rc1/kdmrc,
  files/3.2.0_rc1/startkde-3.2.0_rc1-gentoo.diff:
  New version, remove _rc

  29 Jan 2004; Aron Griffis <agriffis@gentoo.org> kdebase-3.1.5.ebuild:
  stable on alpha and ia64

*kdebase-3.2.0_rc1 (18 Jan 2004)

  18 Jan 2004; Caleb Tennis <caleb@gentoo.org> kdebase-3.0.4-r3.ebuild,