@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/kdebase
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdebase/ChangeLog,v 1.120 2004/03/12 20:44:19 caleb Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdebase/ChangeLog,v 1.121 2004/03/15 14:41:58 caleb Exp $
+
+  15 Mar 2004; Caleb Tennis <caleb@gentoo.org> kdebase-3.2.1.ebuild:
+  I'm adding a warning so that people who have their sandbox on and have the
+  PORTAGE_TMPDIR changed will know that this is a known bug.
 
   12 Mar 2004; Caleb Tennis <caleb@gentoo.org> kdebase-3.1.4.ebuild,
   kdebase-3.2.0.ebuild, kdebase-3.2.1.ebuild, files/focus-patch.diff,
